# libpd-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  justfile  wrapper.h
.github/workflows/: ci.yml
pthreads/msvc/pthreads_arm64-windows-static/: CONTROL
pthreads/msvc/pthreads_arm64-windows-static/debug/lib/: pthreadVC3d.lib  pthreadVCE3d.lib  pthreadVSE3d.lib
pthreads/msvc/pthreads_arm64-windows-static/lib/: pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib
pthreads/msvc/pthreads_arm64-windows-static/share/pthreads/: vcpkg_abi_info.txt
pthreads/msvc/pthreads_x64-windows-static/: CONTROL
pthreads/msvc/pthreads_x64-windows-static/debug/lib/: pthreadVC3d.lib  pthreadVCE3d.lib  pthreadVSE3d.lib
pthreads/msvc/pthreads_x64-windows-static/lib/: pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib
pthreads/msvc/pthreads_x64-windows-static/share/pthreads/: vcpkg_abi_info.txt
pthreads/msvc/pthreads_x86-windows-static/: BUILD_INFO  CONTROL
pthreads/msvc/pthreads_x86-windows-static/debug/lib/: pthreadVC3d.lib  pthreadVCE3d.lib  pthreadVSE3d.lib
pthreads/msvc/pthreads_x86-windows-static/lib/: pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib
pthreads/msvc/pthreads_x86-windows-static/share/pthreads/: vcpkg_abi_info.txt
src/: lib.rs
