[package]
name = "libpd-sys"
version = "0.1.0"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "MIT"
description = "Rust bindings for libpd"
readme = "README.md"
homepage = "https://github.com/alisomay/libpd-sys"
repository = "https://github.com/alisomay/libpd-sys"
documentation = "https://github.com/alisomay/libpd-sys#readme"
keywords = ["puredata", "libpd", "audio", "midi", "bindings"]
categories = ["external-ffi-bindings"]

[build-dependencies]
cmake = "0.1.48"
bindgen = "0.59.2"