[package]
name = "libpd-sys"
version = "0.1.9"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Rust bindings for libpd"
readme = "README.md"
homepage = "https://github.com/alisomay/libpd-sys"
repository = "https://github.com/alisomay/libpd-sys"
documentation = "https://docs.rs/libpd-sys/0.1.9/libpd_sys/"
keywords = ["puredata", "libpd", "audio", "midi", "bindings"]
categories = ["external-ffi-bindings"]
# These are unneeded and too big for a crate upload.
exclude = [
    "libpd/pure-data/doc/**/*",
    "libpd/pure-data/mac/**/*",
    "libpd/pure-data/msw/**/*",
    "libpd/pure-data/font/**/*",
]

[build-dependencies]
cmake = "0.1.48"
bindgen = "0.59.2"

